# gol_cube

./: Cargo.toml  neat_seeds.txt
src/: io.rs  lib.rs  main.rs
