[package]
name = "gol_cube"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
idek = { git = "https://github.com/Masterchef365/idek.git", rev = "6a5678f" }
#idek = { path = "../idek" }
rand = { version = "0.8", features = ["small_rng"] }
structopt = { version = "0.3", default-features = false }
png = "0.17.2"
